--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,8 @@
       rel="stylesheet"
       href="https://ik.imagekit.io/chinesefonts3/packages/syst/dist/SourceHanSerifCN/result.css"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap" rel="stylesheet">
+<!--     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap" rel="stylesheet" /> -->
+    <link href="https://fonts.googleapis.com/css2?family=Gill+Sans:wght@400;700&display=swap" rel="stylesheet" />
 
   </head>
   <body>
