--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=100% height=86 src="https://music.163.com/outchain/player?type=0&id=3235597835&auto=1&height=66"></iframe>
+    <footer>
+      <a class="hover:underline ASTEROIDSYEAHENEMY" href="https://icp.gov.moe/?keyword=20245001" target="_blank"><span class="icon-MOE ASTEROIDSYEAHENEMY"></span>萌ICP备20245001号</a>
+    </footer>
   </body>
 </html>
