--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="keywords" content="东dong的博客">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="GcHpY6u4m7Fdw6wG-0N_LRd4PLOhatGB1mFdX02BkzQ" />
     <link
