--- a/client/index.html
+++ b/client/index.html
@@ -5,16 +5,10 @@
     <meta name="keywords" content="东dong的博客">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="GcHpY6u4m7Fdw6wG-0N_LRd4PLOhatGB1mFdX02BkzQ" />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://ik.imagekit.io/chinesefonts3/packages/syst/dist/SourceHanSerifCN/result.css"
-    />
-<!--     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap" rel="stylesheet" /> -->
-    <link href="https://fonts.googleapis.com/css2?family=Gill+Sans:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css"/>
+    <link rel="stylesheet" href="https://ik.imagekit.io/chinesefonts3/packages/syst/dist/SourceHanSerifCN/result.css"/>
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap"/> -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
