--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta name="keywords" content="东dong的博客">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="GcHpY6u4m7Fdw6wG-0N_LRd4PLOhatGB1mFdX02BkzQ" />
+    <meta name="baidu-site-verification" content="codeva-QAStLQTBJk" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css"/>
     <link rel="stylesheet" href="https://ik.imagekit.io/chinesefonts3/packages/syst/dist/SourceHanSerifCN/result.css"/>
   </head>
